# catalog-ai

./: .gitignore  README.md  pyproject.toml  test.ipynb  v1.ipynb
catalog_ai/agents/: ask_user.py  search_string_extractor.py  supervisor.py
catalog_ai/output_parsers/: agents.py
catalog_ai/tools/: hugging_face.py
