[tool.poetry]
name = "catalog-ai"
version = "0.1.0"
description = ""
authors = ["CSK <cskcvarma13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
huggingface = "^0.0.1"
huggingface-hub = "^0.20.3"
huggingface-cli = "^0.1"
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
langgraph = "^0.0.24"
python-dotenv = "^1.0.1"
datasets = "^2.17.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
